--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,8 @@
 ---
 import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
 
-const pageTitle = "About Moi";
+const pageTitle = "About Me";
 
 const identity = {
   firstName: "Mike",
@@ -24,9 +25,7 @@ const goal = 3;
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
