--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from '../components/Navigation.astro';
 ---
 
 <html lang="en">
@@ -10,10 +11,8 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		
+		<Navigation />
+
 		<h1>Astro</h1>
 	</body>
 </html>
