--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,21 +1,18 @@
 ---
-import Navigation from "../components/Navigation.astro";
----
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width" />
-    <title>Astro</title>
-  </head>
-  <body>
-    <Navigation />
+import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 
-    <h1>My Astro Learning Blog</h1>
+const allPosts = await Astro.glob('../pages/posts/*.md');
+const pageTitle = "Blog";
+---
+<BaseLayout pageTitle={pageTitle}>
+    <h2>My Astro Learning Blog</h2>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
-      <li><a href="/posts/post-1/">Post 1</a></li>
-      <li><a href="/posts/post-2/">Post 2</a></li>
-      <li><a href="/posts/post-3/">Post 3</a></li>
-    </ul>
-  </body>
-</html>
+      {
+        allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)
+      }
+    </ul>	
+</BaseLayout>
+
+
