--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import TagList from "../components/TagList.astro";
 
 const { frontmatter } = Astro.props;
 ---
@@ -7,6 +8,7 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
   <p>Written by {frontmatter.author}</p>
   <p>Published: {new Date(frontmatter.pubDate).toLocaleDateString()}</p>
+  <TagList tags={frontmatter.tags}/>
   <slot />
 </BaseLayout>
 
