--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,7 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import TagList from "../../components/TagList.astro";
+
 const allPosts = await Astro.glob("../posts/*.md");
 const uniqueTags = [
   ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
@@ -9,31 +11,5 @@ const pageTitle = "Tags";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <ul class="tags">
-        {
-            uniqueTags.map(tag => <li class="tag"><a href={`/tags/${tag}`}>{tag}</a></li>)
-        }
-    </ul>
+    <TagList tags={uniqueTags}/>
 </BaseLayout>
-
-<style>
-    a {
-      color: #00539F;
-    }
-  
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0 auto;
-      list-style-type: none;
-    }
-  
-    .tag {
-      margin: 0.25em;
-      border: dotted 1px #a1a1a1;
-      border-radius: .5em;
-      padding: .5em 1em;
-      font-size: 1.15em;
-      background-color: #F8FCFD;
-    }
-  </style>
