Another boat load of changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ const identity = {
 const skills = ["CSS", "JavaScript", "Astro", "Walking and chewing gum"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 ---
 
