--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import "../styles/global.css";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import "@styles/global.css";
+import BaseLayout from "@layouts/BaseLayout.astro";
 
 const pageTitle = "About Me";
 
